k8s/crm-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-dev
  labels:
    app.kubernetes.io/part-of: docker-composer
    migration-source: node3-docker-compose
